fix: select spacing

--- a/src/components/cn-asset-select/theme.sass
+++ b/src/components/cn-asset-select/theme.sass
@@ -1,3 +1,7 @@
+.cyan--mode--light
+  --cyan-color-field: #002337
+  --cyan-background-field-hover: hsla(var(--chroma-primary-c-hsl), 0.88)
+  --cyan-background-field-selected: hsla(var(--chroma-primary-c-hsl), 0.77)
 .cyan--mode--dark
   --cyan-background-field-hover: hsla(var(--chroma-primary-c-hsl), 0.44)
   --cyan-background-field-selected: hsla(var(--chroma-primary-c-hsl), 0.33)
